--- a/src/app.html
+++ b/src/app.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="description" content="" />
-		<link rel="icon" href="%svelte.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%svelte.head%
-	</head>
-	<body>
-		<div id="svelte">%svelte.body%</div>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="description" content="" />
+    <link rel="icon" href="%svelte.assets%/favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    %svelte.head%
+  </head>
+  <body>
+    <script>
+      (function () {
+        const darkModeQuery = window.matchMedia("(prefers-color-scheme: dark)");
+        let prefersDarkMode;
+        try {
+          prefersDarkMode = JSON.parse(localStorage.getItem("theme"));
+        } catch (error) {}
+        if (
+          prefersDarkMode ? prefersDarkMode === "dark" : darkModeQuery.matches
+        )
+          document.documentElement.classList.add("dark");
+      })();
+    </script>
+    <div id="svelte">%svelte.body%</div>
+  </body>
 </html>
