--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
 <meta http-equiv="cache-control" content="max-age=60"><title>Paul Lavender-Jones</title><meta charset="utf-8" data-svelte="svelte-5r3x8t"><meta http-equiv="x-ua-compatible" content="ie=edge" data-svelte="svelte-5r3x8t"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" data-svelte="svelte-5r3x8t"><meta name="robots" content="index,follow" data-svelte="svelte-5r3x8t">
     <meta name="title" content="Paul Lavender-Jones" data-svelte="svelte-5r3x8t"><meta name="description" content="My personal website where I can show off interesting projects and write down my thoughts." data-svelte="svelte-5r3x8t"><meta property="og:image" content="https://user-images.githubusercontent.com/6764957/147861359-3ad9438f-41d1-47c8-aa05-95c7d18497f0.png" data-svelte="svelte-5r3x8t"><meta property="og:title" content="Paul Lavender-Jones" data-svelte="svelte-5r3x8t"><meta property="og:description" content="My personal website where I can show off interesting projects and write down my thoughts." data-svelte="svelte-5r3x8t"><meta property="og:url" content="https://paullj.github.io" data-svelte="svelte-5r3x8t"><link rel="canonical" href="https://paullj.github.io" data-svelte="svelte-5r3x8t">
 	<link rel="stylesheet" href="/_app/assets/start-dab29f39.css">
-	<link rel="stylesheet" href="/_app/assets/pages/about.md-277712a6.css">
-	<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-50fdac4f.css">
-	<link rel="stylesheet" href="/_app/assets/pages/index.svelte-b4ac0857.css">
-	<link rel="modulepreload" href="/_app/start-24a17d7c.js">
-	<link rel="modulepreload" href="/_app/chunks/vendor-6ad10e66.js">
-	<link rel="modulepreload" href="/_app/chunks/preload-helper-ec9aa979.js">
-	<link rel="modulepreload" href="/_app/pages/__layout.svelte-77cc2c27.js">
-	<link rel="modulepreload" href="/_app/chunks/stores-9a4d7a61.js">
-	<link rel="modulepreload" href="/_app/pages/index.svelte-06125c6d.js">
-	<link rel="modulepreload" href="/_app/chunks/siteConfig-3fa27199.js"><script type="module">
-		import { start } from "/_app/start-24a17d7c.js";
+	<link rel="stylesheet" href="/_app/assets/pages/posts/index.svelte-a11b2070.css">
+	<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-1e35e9e6.css">
+	<link rel="stylesheet" href="/_app/assets/pages/index.svelte-ec13a0a8.css">
+	<link rel="modulepreload" href="/_app/start-11d10772.js">
+	<link rel="modulepreload" href="/_app/chunks/vendor-1dc40c8a.js">
+	<link rel="modulepreload" href="/_app/pages/__layout.svelte-75fdaf43.js">
+	<link rel="modulepreload" href="/_app/chunks/stores-b3698e4f.js">
+	<link rel="modulepreload" href="/_app/pages/index.svelte-3797dad7.js">
+	<link rel="modulepreload" href="/_app/chunks/ExternalLink-a38c467f.js"><script type="module">
+		import { start } from "/_app/start-11d10772.js";
 		start({
 			target: document.querySelector("#svelte"),
 			paths: {"base":"","assets":""},
@@ -31,8 +30,8 @@
 				status: 200,
 				error: null,
 				nodes: [
-					import("/_app/pages/__layout.svelte-77cc2c27.js"),
-						import("/_app/pages/index.svelte-06125c6d.js")
+					import("/_app/pages/__layout.svelte-75fdaf43.js"),
+						import("/_app/pages/index.svelte-3797dad7.js")
 				],
 				url: new URL("http://sveltekit-prerender/"),
 				params: {}
@@ -57,7 +56,7 @@
     <div id="svelte">
 
 
-<div class="flex flex-col max-w-screen-sm min-h-screen px-4 py-2 mx-auto"><header class="flex flex-row w-full py-4 items-center"><nav class="flex-1 text-lg sm:text-base"></nav>
+<div class="flex flex-col max-w-screen-sm min-h-screen px-4 py-2 mx-auto"><header class="flex flex-row w-full py-8 items-center"><nav class="flex-1 text-lg sm:text-base"></nav>
   <div class="no-js-hidden"><label for="nightModeCheckbox"><div class="cursor-pointer select-none  hover:text-light-blue-600"><span class="m-2 w-5 h-5 i-teenyicons-moon-outline"></span>
     <input id="nightModeCheckbox" type="checkbox" class="inline sr-only" ></div>
   <span class="ml-2 cursor-default sr-only">Dark Mode Toggle</span></label></div></header>
@@ -66,18 +65,26 @@
 
 
 
-<h1 class="py-12 font-bold font-serif text-4xl whitespace-pre-line leading-none">Paul
+<h1 class="mt-12 mb-4 font-bold font-serif text-4xl whitespace-pre-line leading-none">Paul
 Lavender-Jones</h1>
 
-<form class="text-xl mb-2 inline-block border-b-2 border-dotted hover:border-solid"><div class="relative inline-block mr-2"><select name="posts-filter" id="posts-filter" class="appearance-none bg-transparent leading-none"><option value="newest" class="bg-white pr-2" selected>Newest</option><option value="oldest" class="bg-white pr-2">Oldest</option><option value="loved" class="bg-white pr-4">Loved</option><option value="popular" class="bg-white pr-4">Popular</option></select> 
-    <span class="inline-block absolute bottom-0 right-0 i-teenyicons-down-solid w-2 h-full pointer-events-none"></span></div>   
-  <label for="posts-filter">Posts</label></form>
+<div class="mt-4 mb-16"><div class="text-left"><a href="mailto:paul@lavender-jones.com?subject=Hi!" class="mr-4" target="_blank" rel="noopener" aria-label="Send me an email"><span class="i-teenyicons-at-outline w-6 h-6 hover:text-red"></span></a>
+  <a href="https://www.linkedin.com/in/paul-lavender-jones" class="mx-4" target="_blank" rel="noopener" aria-label="Connect on LinkedIn"><span class="i-teenyicons-linkedin-outline w-6 h-6 hover:text-blue-500"></span></a>
+  <a href="https://www.github.com/paullj" class="mx-4" target="_blank" rel="noopener" aria-label="See my public repos on GitHub"><span class="i-teenyicons-github-outline w-6 h-6 hover:text-purple"></span></a>
+  <a href="#" class="ml-4" target="_blank" rel="noopener" aria-label="Share by Email"><span class="font-mono inline-block text-sm align-middle decoration-wavy decoration-1 hover:underline">Curriculum Vitae
+    </span></a></div></div>
 
-<ul class="text-lg leading-none"><li class="flex flex-row w-full items-center justify-start mb-4"><span class="leading-none text-gray-400 uppercase tracking-wide text-sm font-extrabold">Tue, 1 Feb 22</span>
+<div class="flex flex-row items-center mb-2"><div class="flex-1"><h2 class="inline-block font-serif text-xl">Posts</h2>
+    <a href="" class="inline-block ml-2" target="_blank" rel="noopener" aria-label="RSS feed"><span class="i-teenyicons-rss-solid mb-1 w-3 h-3 hover:text-orange"></span></a></div>
+
+  <form class="font-mono text-sm"><label for="posts-filter">Sort by</label>
+    <select name="posts-filter" id="posts-filter" class="py-2 cursor-pointer underline underline-offset-1.5 bg-transparent decoration-dotted decoration-2 leading-none"><option value="newest" class="bg-white pr-2" selected>Newest</option><option value="oldest" class="bg-white pr-2">Oldest</option><option value="reactions" class="bg-white pr-2">Reactions</option><option value="comments" class="bg-white pr-2">Comments</option></select></form></div>
+
+<ul class="text-lg leading-none"><li class="flex flex-row w-full items-center justify-start mb-2 pb-1"><span class="leading-none text-gray-400 uppercase tracking-wide text-sm font-extrabold">Tue, 1 Feb 22</span>
       
-      <span class="ml-2 align-middle"><a class="hover:underline decoration-2px" href="/posts/this-is-a-published-post" sveltekit:prefetch>This is a published post        
+      <span class="flex-1 ml-4 align-middle"><a class="hover:underline decoration-2px" href="/posts/this-is-a-published-post" sveltekit:prefetch>This is a published post        
         </a></span>
-      <div class="self-end flex flex-row text-gray-400 font-bold decoration-2 font-mono text-xs ml-4 gap-x-2"><a class="flex flex-row items-center hover:underline" href="/posts/this-is-a-published-post#reactions" sveltekit:prefetch>8
+      <div class="flex flex-row text-gray-400 font-bold decoration-2 font-mono text-xs ml-6 gap-x-2"><a class="flex flex-row items-center hover:underline" href="/posts/this-is-a-published-post#reactions" sveltekit:prefetch>8
             <span class="i-teenyicons-heart-solid h-3 ml-1"></span>
           </a>
         </div>
