--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="utf-8" />
     <meta name="description" content="" />
-    <link rel="icon" href="./favicon.png" />
+    <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="content-security-policy" content="">
 <meta http-equiv="cache-control" content="max-age=60"><title>Paul Lavender-Jones</title><meta charset="utf-8" data-svelte="svelte-5r3x8t"><meta http-equiv="x-ua-compatible" content="ie=edge" data-svelte="svelte-5r3x8t"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" data-svelte="svelte-5r3x8t"><meta name="robots" content="index,follow" data-svelte="svelte-5r3x8t">
     <meta name="title" content="Paul Lavender-Jones" data-svelte="svelte-5r3x8t"><meta name="description" content="My personal website where I can show off interesting projects and write down my thoughts." data-svelte="svelte-5r3x8t"><meta property="og:image" content="https://user-images.githubusercontent.com/6764957/147861359-3ad9438f-41d1-47c8-aa05-95c7d18497f0.png" data-svelte="svelte-5r3x8t"><meta property="og:title" content="Paul Lavender-Jones" data-svelte="svelte-5r3x8t"><meta property="og:description" content="My personal website where I can show off interesting projects and write down my thoughts." data-svelte="svelte-5r3x8t"><meta property="og:url" content="https://paullj.github.io" data-svelte="svelte-5r3x8t"><link rel="canonical" href="https://paullj.github.io" data-svelte="svelte-5r3x8t">
 	<link rel="stylesheet" href="/_app/assets/start-dab29f39.css">
-	<link rel="stylesheet" href="/_app/assets/pages/posts/index.svelte-a11b2070.css">
+	<link rel="stylesheet" href="/_app/assets/vendor-3b261309.css">
 	<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-1e35e9e6.css">
 	<link rel="stylesheet" href="/_app/assets/pages/index.svelte-ec13a0a8.css">
-	<link rel="modulepreload" href="/_app/start-11d10772.js">
+	<link rel="modulepreload" href="/_app/start-b9d31d37.js">
 	<link rel="modulepreload" href="/_app/chunks/vendor-1dc40c8a.js">
 	<link rel="modulepreload" href="/_app/pages/__layout.svelte-75fdaf43.js">
 	<link rel="modulepreload" href="/_app/chunks/stores-b3698e4f.js">
 	<link rel="modulepreload" href="/_app/pages/index.svelte-3797dad7.js">
 	<link rel="modulepreload" href="/_app/chunks/ExternalLink-a38c467f.js"><script type="module">
-		import { start } from "/_app/start-11d10772.js";
+		import { start } from "/_app/start-b9d31d37.js";
 		start({
 			target: document.querySelector("#svelte"),
 			paths: {"base":"","assets":""},
