--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 <meta http-equiv="cache-control" content="max-age=60"><title>Paul Lavender-Jones</title><meta charset="utf-8" data-svelte="svelte-5r3x8t"><meta http-equiv="x-ua-compatible" content="ie=edge" data-svelte="svelte-5r3x8t"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" data-svelte="svelte-5r3x8t"><meta name="robots" content="index,follow" data-svelte="svelte-5r3x8t">
     <meta name="title" content="Paul Lavender-Jones" data-svelte="svelte-5r3x8t"><meta name="description" content="My personal website where I can show off interesting projects and write down my thoughts." data-svelte="svelte-5r3x8t"><meta property="og:image" content="https://user-images.githubusercontent.com/6764957/147861359-3ad9438f-41d1-47c8-aa05-95c7d18497f0.png" data-svelte="svelte-5r3x8t"><meta property="og:title" content="Paul Lavender-Jones" data-svelte="svelte-5r3x8t"><meta property="og:description" content="My personal website where I can show off interesting projects and write down my thoughts." data-svelte="svelte-5r3x8t"><meta property="og:url" content="https://paullj.github.io" data-svelte="svelte-5r3x8t"><link rel="canonical" href="https://paullj.github.io" data-svelte="svelte-5r3x8t">
 	<link rel="stylesheet" href="/_app/assets/start-b121cee6.css">
-	<link rel="stylesheet" href="/_app/assets/vendor-b5bde1ac.css">
+	<link rel="stylesheet" href="/_app/assets/error.svelte-03c54461.css">
 	<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-6ea44ae0.css">
 	<link rel="stylesheet" href="/_app/assets/pages/index.svelte-3af4ec54.css">
-	<link rel="modulepreload" href="/_app/start-a6b685f2.js">
+	<link rel="modulepreload" href="/_app/start-1d7541f5.js">
 	<link rel="modulepreload" href="/_app/chunks/vendor-0edfcedb.js">
 	<link rel="modulepreload" href="/_app/chunks/singletons-a6a7384f.js">
-	<link rel="modulepreload" href="/_app/pages/__layout.svelte-fc7492c2.js">
+	<link rel="modulepreload" href="/_app/pages/__layout.svelte-f8343019.js">
 	<link rel="modulepreload" href="/_app/chunks/siteConfig-2c02497e.js">
 	<link rel="modulepreload" href="/_app/chunks/stores-d6f5a68e.js">
 	<link rel="modulepreload" href="/_app/pages/index.svelte-555dadd3.js">
 	<link rel="modulepreload" href="/_app/chunks/ExternalLink-83b2f731.js"><script type="module">
-		import { start } from "/_app/start-a6b685f2.js";
+		import { start } from "/_app/start-1d7541f5.js";
 		start({
 			target: document.querySelector("#svelte"),
 			paths: {"base":"","assets":""},
@@ -32,7 +32,7 @@
 				status: 200,
 				error: null,
 				nodes: [
-					import("/_app/pages/__layout.svelte-fc7492c2.js"),
+					import("/_app/pages/__layout.svelte-f8343019.js"),
 						import("/_app/pages/index.svelte-555dadd3.js")
 				],
 				url: new URL("http://sveltekit-prerender/"),
