--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="content-security-policy" content="">
 <meta http-equiv="cache-control" content="max-age=60"><title>Paul Lavender-Jones</title><meta charset="utf-8" data-svelte="svelte-5r3x8t"><meta http-equiv="x-ua-compatible" content="ie=edge" data-svelte="svelte-5r3x8t"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" data-svelte="svelte-5r3x8t"><meta name="robots" content="index,follow" data-svelte="svelte-5r3x8t">
-    <meta name="title" content="Paul Lavender-Jones" data-svelte="svelte-5r3x8t"><meta name="description" content="My personal website where I can show off interesting projects and write down my thoughts." data-svelte="svelte-5r3x8t"><meta property="og:image" content="https://user-images.githubusercontent.com/6764957/147861359-3ad9438f-41d1-47c8-aa05-95c7d18497f0.png" data-svelte="svelte-5r3x8t"><meta property="og:title" content="Paul Lavender-Jones" data-svelte="svelte-5r3x8t"><meta property="og:description" content="My personal website where I can show off interesting projects and write down my thoughts." data-svelte="svelte-5r3x8t"><meta property="og:url" content="https://paullj.github.io" data-svelte="svelte-5r3x8t"><link rel="canonical" href="https://paullj.github.io" data-svelte="svelte-5r3x8t">
-	<link rel="stylesheet" href="/_app/assets/start-d15cd5b3.css">
-	<link rel="stylesheet" href="/_app/assets/ExternalLink-d2f66a10.css">
-	<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-425671fd.css">
-	<link rel="stylesheet" href="/_app/assets/pages/index.svelte-8200dd16.css">
-	<link rel="modulepreload" href="/_app/start-fe077802.js">
+    <meta name="title" content="Paul Lavender-Jones" data-svelte="svelte-5r3x8t"><meta name="description" content="My personal website where I can show off interesting projects and write down my thoughts." data-svelte="svelte-5r3x8t"><meta property="og:image" content="https://raw.githubusercontent.com/paullj/paullj.github.io/main/screenshot.png" data-svelte="svelte-5r3x8t"><meta property="og:title" content="Paul Lavender-Jones" data-svelte="svelte-5r3x8t"><meta property="og:description" content="My personal website where I can show off interesting projects and write down my thoughts." data-svelte="svelte-5r3x8t"><meta property="og:url" content="https://paullj.github.io" data-svelte="svelte-5r3x8t"><link rel="canonical" href="https://paullj.github.io" data-svelte="svelte-5r3x8t">
+	<link rel="stylesheet" href="/_app/assets/start-a079dc92.css">
+	<link rel="stylesheet" href="/_app/assets/pages/posts/index.svelte-32a08f02.css">
+	<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-32c7a4f3.css">
+	<link rel="stylesheet" href="/_app/assets/pages/index.svelte-8470091e.css">
+	<link rel="modulepreload" href="/_app/start-6d5d0df3.js">
 	<link rel="modulepreload" href="/_app/chunks/vendor-df338b46.js">
 	<link rel="modulepreload" href="/_app/chunks/singletons-a6a7384f.js">
-	<link rel="modulepreload" href="/_app/pages/__layout.svelte-1ededaee.js">
-	<link rel="modulepreload" href="/_app/chunks/siteConfig-20bade9d.js">
+	<link rel="modulepreload" href="/_app/pages/__layout.svelte-3b2a2cd7.js">
+	<link rel="modulepreload" href="/_app/chunks/siteConfig-cd65c973.js">
 	<link rel="modulepreload" href="/_app/chunks/stores-f5ed660c.js">
-	<link rel="modulepreload" href="/_app/pages/index.svelte-369722fc.js">
+	<link rel="modulepreload" href="/_app/pages/index.svelte-84325da7.js">
 	<link rel="modulepreload" href="/_app/chunks/ExternalLink-4230c020.js"><script type="module">
-		import { start } from "/_app/start-fe077802.js";
+		import { start } from "/_app/start-6d5d0df3.js";
 		start({
 			target: document.querySelector("#svelte"),
 			paths: {"base":"","assets":""},
@@ -32,8 +32,8 @@
 				status: 200,
 				error: null,
 				nodes: [
-					import("/_app/pages/__layout.svelte-1ededaee.js"),
-						import("/_app/pages/index.svelte-369722fc.js")
+					import("/_app/pages/__layout.svelte-3b2a2cd7.js"),
+						import("/_app/pages/index.svelte-84325da7.js")
 				],
 				url: new URL("http://sveltekit-prerender/"),
 				params: {}
@@ -81,8 +81,7 @@ Lavender-Jones</h1>
 <div class="mt-4 mb-16"><div class="text-left"><a href="mailto:paul@lavender-jones.com?subject=Hi!" class="mr-4" target="_blank" rel="noopener" aria-label="Send me an email"><span class="i-teenyicons-at-outline w-6 h-6 hover:text-red"></span></a>
   <a href="https://www.linkedin.com/in/paul-lavender-jones" class="mx-4" target="_blank" rel="noopener" aria-label="Connect on LinkedIn"><span class="i-teenyicons-linkedin-outline w-6 h-6 hover:text-blue-500"></span></a>
   <a href="https://www.github.com/paullj" class="mx-4" target="_blank" rel="noopener" aria-label="See my public repos on GitHub"><span class="i-teenyicons-github-outline w-6 h-6 hover:text-purple"></span></a>
-  <a href="#" class="ml-4" target="_blank" rel="noopener" aria-label="Share by Email"><span class="font-mono inline-block text-sm align-middle decoration-wavy decoration-1 hover:underline">Curriculum Vitae
-    </span></a></div></div>
+  </div></div>
 
 <div class="flex flex-row items-center mb-2"><div class="flex-1"><h2 class="inline-block font-serif text-xl">Posts</h2>
     <a href="" class="inline-block ml-2" target="_blank" rel="noopener" aria-label="RSS feed"><span class="i-teenyicons-rss-solid mb-1 w-3 h-3 hover:text-orange"></span></a></div>
@@ -90,7 +89,7 @@ Lavender-Jones</h1>
   <form class="font-mono text-sm"><label for="posts-filter">Sort by</label>
     <select name="posts-filter" id="posts-filter" class="py-2 cursor-pointer underline underline-offset-1.5 bg-transparent decoration-dotted decoration-2 leading-none"><option value="newest" class="bg-white pr-2" selected>Newest</option><option value="oldest" class="bg-white pr-2">Oldest</option><option value="reactions" class="bg-white pr-2">Reactions</option><option value="comments" class="bg-white pr-2">Comments</option></select></form></div>
 
-<ul class="text-lg"><li class="flex flex-row space-x-2 items-center"><div class="mr-4"><date class="block leading-none text-gray-400 uppercase tracking-wide text-sm font-extrabold">Mon, 1 Aug 16
+<ul class="text-lg"><li class="flex flex-row space-x-2 items-center"><div class="mr-2 min-w-24"><date class="block leading-none text-gray-400 uppercase tracking-wide text-xs font-extrabold">Mon, 1 Aug 16
         </date></div>
       <div class="flex-1 align-middle truncate"><a class="group decoration-2px" href="/posts/reupcycling-a-drone" sveltekit:prefetch>
           <span class="group-hover:underline">Re/upcycling a Drone</span>
