--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="description" content="" />
     <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="content-security-policy" content="">
@@ -12,15 +11,15 @@
 	<link rel="stylesheet" href="/_app/assets/pages/posts/index.svelte-32a08f02.css">
 	<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-32c7a4f3.css">
 	<link rel="stylesheet" href="/_app/assets/pages/index.svelte-8470091e.css">
-	<link rel="modulepreload" href="/_app/start-6d5d0df3.js">
+	<link rel="modulepreload" href="/_app/start-686a06c7.js">
 	<link rel="modulepreload" href="/_app/chunks/vendor-df338b46.js">
 	<link rel="modulepreload" href="/_app/chunks/singletons-a6a7384f.js">
-	<link rel="modulepreload" href="/_app/pages/__layout.svelte-3b2a2cd7.js">
+	<link rel="modulepreload" href="/_app/pages/__layout.svelte-0f267550.js">
 	<link rel="modulepreload" href="/_app/chunks/siteConfig-cd65c973.js">
 	<link rel="modulepreload" href="/_app/chunks/stores-f5ed660c.js">
-	<link rel="modulepreload" href="/_app/pages/index.svelte-84325da7.js">
+	<link rel="modulepreload" href="/_app/pages/index.svelte-97997bac.js">
 	<link rel="modulepreload" href="/_app/chunks/ExternalLink-4230c020.js"><script type="module">
-		import { start } from "/_app/start-6d5d0df3.js";
+		import { start } from "/_app/start-686a06c7.js";
 		start({
 			target: document.querySelector("#svelte"),
 			paths: {"base":"","assets":""},
@@ -32,8 +31,8 @@
 				status: 200,
 				error: null,
 				nodes: [
-					import("/_app/pages/__layout.svelte-3b2a2cd7.js"),
-						import("/_app/pages/index.svelte-84325da7.js")
+					import("/_app/pages/__layout.svelte-0f267550.js"),
+						import("/_app/pages/index.svelte-97997bac.js")
 				],
 				url: new URL("http://sveltekit-prerender/"),
 				params: {}
@@ -68,7 +67,7 @@
     <input type="radio" name="nightModeCheckbox" id="light" value="1"><label for="dark" class="ml-2 cursor-default sr-only">dark</label>
     <input type="radio" name="nightModeCheckbox" id="dark" value="2"></div>
 
-  <button class="relative inline-block group w-8 h-8"><span class="bottom-0 right-0 group-hover:text-light-blue-600 absolute w-1/2 h-2/3 i-teenyicons-moon-outline"></span>
+  <button class="relative inline-block group w-8 h-8" aria-label="Theme Toggle"><span class="bottom-0 right-0 group-hover:text-light-blue-600 absolute w-1/2 h-2/3 i-teenyicons-moon-outline"></span>
       <span class="top-0 left-0 group-hover:text-orange-400 absolute w-1/2 h-2/3 i-teenyicons-sun-outline"></span></button></form></div></header>
   <main class="pt-4 sm:pt-6 flex-grow">
 
@@ -84,7 +83,7 @@ Lavender-Jones</h1>
   </div></div>
 
 <div class="flex flex-row items-center mb-2"><div class="flex-1"><h2 class="inline-block font-serif text-xl">Posts</h2>
-    <a href="" class="inline-block ml-2" target="_blank" rel="noopener" aria-label="RSS feed"><span class="i-teenyicons-rss-solid mb-1 w-3 h-3 hover:text-orange"></span></a></div>
+    </div>
 
   <form class="font-mono text-sm"><label for="posts-filter">Sort by</label>
     <select name="posts-filter" id="posts-filter" class="py-2 cursor-pointer underline underline-offset-1.5 bg-transparent decoration-dotted decoration-2 leading-none"><option value="newest" class="bg-white pr-2" selected>Newest</option><option value="oldest" class="bg-white pr-2">Oldest</option><option value="reactions" class="bg-white pr-2">Reactions</option><option value="comments" class="bg-white pr-2">Comments</option></select></form></div>
