--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<link rel="stylesheet" href="/_app/immutable/assets/start-491f5a18.css">
 	<link rel="stylesheet" href="/_app/immutable/assets/pages/__layout.svelte-f385a540.css">
 	<link rel="stylesheet" href="/_app/immutable/assets/pages/index.svelte-44469348.css">
-	<link rel="stylesheet" href="/_app/immutable/assets/pages/posts/__error.svelte-16ed11e2.css">
-	<link rel="modulepreload" href="/_app/immutable/start-515aff24.js">
+	<link rel="stylesheet" href="/_app/immutable/assets/error.svelte-0cf2a308.css">
+	<link rel="modulepreload" href="/_app/immutable/start-65fa21c5.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/index-1338106f.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/index-6cb4c7e5.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/singletons-d1fb5791.js">
@@ -141,15 +141,15 @@ Lavender-Jones</h1>
 
 
 <noscript><style global>:global(.no-js-hidden) {
-      @apply hidden;
+      display: none !important;
     }
   </style></noscript>
 
 
-		<script type="module" data-sveltekit-hydrate="e0rsqz">
-		import { start } from "/_app/immutable/start-515aff24.js";
+		<script type="module" data-sveltekit-hydrate="sj7qe0">
+		import { start } from "/_app/immutable/start-65fa21c5.js";
 		start({
-			target: document.querySelector('[data-sveltekit-hydrate="e0rsqz"]').parentNode,
+			target: document.querySelector('[data-sveltekit-hydrate="sj7qe0"]').parentNode,
 			paths: {"base":"","assets":""},
 			session: {},
 			route: true,
