--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 <meta http-equiv="cache-control" content="max-age=60"><title>Paul Lavender-Jones</title><meta charset="utf-8" data-svelte="svelte-5r3x8t"><meta http-equiv="x-ua-compatible" content="ie=edge" data-svelte="svelte-5r3x8t"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" data-svelte="svelte-5r3x8t"><meta name="robots" content="index,follow" data-svelte="svelte-5r3x8t">
     <meta name="title" content="Paul Lavender-Jones" data-svelte="svelte-5r3x8t"><meta name="description" content="My personal website where I can show off interesting projects and write down my thoughts." data-svelte="svelte-5r3x8t"><meta property="og:image" content="https://raw.githubusercontent.com/paullj/paullj.github.io/main/screenshot.png" data-svelte="svelte-5r3x8t"><meta property="og:title" content="Paul Lavender-Jones" data-svelte="svelte-5r3x8t"><meta property="og:description" content="My personal website where I can show off interesting projects and write down my thoughts." data-svelte="svelte-5r3x8t"><meta property="og:url" content="https://paullj.github.io" data-svelte="svelte-5r3x8t"><link rel="canonical" href="https://paullj.github.io" data-svelte="svelte-5r3x8t">
 	<link rel="stylesheet" href="/_app/immutable/assets/start-3644ecb0.css">
-	<link rel="stylesheet" href="/_app/immutable/assets/pages/__layout.svelte-ba165a14.css">
-	<link rel="stylesheet" href="/_app/immutable/assets/pages/index.svelte-ad537dbd.css">
-	<link rel="stylesheet" href="/_app/immutable/assets/getViewCount-c00d2062.css">
-	<link rel="modulepreload" href="/_app/immutable/start-8e89cde3.js">
-	<link rel="modulepreload" href="/_app/immutable/chunks/index-5ecf021d.js">
-	<link rel="modulepreload" href="/_app/immutable/chunks/index-10ea0a0b.js">
+	<link rel="stylesheet" href="/_app/immutable/assets/pages/__layout.svelte-cd813667.css">
+	<link rel="stylesheet" href="/_app/immutable/assets/pages/index.svelte-432362ec.css">
+	<link rel="stylesheet" href="/_app/immutable/assets/pages/posts/index.svelte-26a28d0a.css">
+	<link rel="modulepreload" href="/_app/immutable/start-8db1f10f.js">
+	<link rel="modulepreload" href="/_app/immutable/chunks/index-8c0e4016.js">
+	<link rel="modulepreload" href="/_app/immutable/chunks/index-c239ecf6.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/singletons-d1fb5791.js">
-	<link rel="modulepreload" href="/_app/immutable/pages/__layout.svelte-e0090b58.js">
+	<link rel="modulepreload" href="/_app/immutable/pages/__layout.svelte-c5465100.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/siteConfig-cd65c973.js">
-	<link rel="modulepreload" href="/_app/immutable/chunks/stores-f6c54ed2.js">
-	<link rel="modulepreload" href="/_app/immutable/pages/index.svelte-d2f9d415.js">
-	<link rel="modulepreload" href="/_app/immutable/chunks/getViewCount-0a8aa47d.js">
+	<link rel="modulepreload" href="/_app/immutable/chunks/stores-386c3cb2.js">
+	<link rel="modulepreload" href="/_app/immutable/pages/index.svelte-b6754686.js">
+	<link rel="modulepreload" href="/_app/immutable/chunks/getViewCount-ee31ff01.js">
   </head>
   <body>
     <script>
@@ -65,7 +65,7 @@ Lavender-Jones</h1>
 <div class="flex flex-row items-center mb-2"><div class="flex-1"><h2 class="inline-block font-serif text-xl">Posts</h2>
     </div>
 
-  <form class="no-js-hidden font-mono text-sm"><label for="search"><span class="i-teenyicons-search-outline w-4 h-4"></span></label>
+  <form class="hidden sm:block no-js-hidden font-mono text-sm"><label for="search"><span class="i-teenyicons-search-outline w-4 h-4"></span></label>
 
   <input type="text" name="search" class="bg-transparent outline-none w-36 mr-4" placeholder="Type / to Search"></form>
 
@@ -73,7 +73,7 @@ Lavender-Jones</h1>
   <form class="no-js-hidden font-mono text-sm"><label for="posts-filter">
     <span class="i-teenyicons-filter-outline mb-0.5 w-4 h-4"></span></label>
 
-  <select name="posts-filter" id="posts-filter" class="py-2 cursor-pointer underline underline-offset-1.5 bg-transparent decoration-dotted decoration-2 leading-none"><option value="newest" class="bg-white pr-2" selected>Newest</option><option value="oldest" class="bg-white pr-2">Oldest</option><option value="views" class="bg-white pr-2">Views</option><option value="reactions" class="bg-white pr-2">Reactions</option><option value="comments" class="bg-white pr-2">Comments</option></select></form></div>
+  <select name="posts-filter" id="posts-filter" class="py-2 cursor-pointer bg-gray-50 dark:bg-gray-900 leading-none"><option value="newest" class="bg-gray-50 dark:bg-gray-900 p-2" selected>Newest</option><option value="oldest" class="bg-gray-50 dark:bg-gray-900 p-2">Oldest</option><option value="views" class="bg-gray-50 dark:bg-gray-900 p-2">Views</option><option value="reactions" class="bg-gray-50 dark:bg-gray-900 p-2">Reactions</option><option value="comments" class="bg-gray-50 dark:bg-gray-900 p-2">Comments</option></select></form></div>
 
 <ul class="text-lg"><li class="flex flex-col sm:flex-row sm:space-x-2 sm:items-center"><div class="mr-2 min-w-24"><date class="block leading-none text-gray-400 uppercase tracking-wide text-xs font-extrabold">Fri, 10 Jun 22
         </date></div>
@@ -152,10 +152,10 @@ Lavender-Jones</h1>
   </style></noscript>
 
 
-		<script type="module" data-sveltekit-hydrate="11j0oop">
-		import { start } from "/_app/immutable/start-8e89cde3.js";
+		<script type="module" data-sveltekit-hydrate="1gaq6he">
+		import { start } from "/_app/immutable/start-8db1f10f.js";
 		start({
-			target: document.querySelector('[data-sveltekit-hydrate="11j0oop"]').parentNode,
+			target: document.querySelector('[data-sveltekit-hydrate="1gaq6he"]').parentNode,
 			paths: {"base":"","assets":""},
 			session: {},
 			route: true,
