--- a/404.html
+++ b/404.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="content-security-policy" content="">
 	<link rel="stylesheet" href="/_app/immutable/assets/start-3644ecb0.css">
-	<link rel="stylesheet" href="/_app/immutable/assets/pages/__layout.svelte-cd813667.css">
+	<link rel="stylesheet" href="/_app/immutable/assets/pages/__layout.svelte-f5cb86b0.css">
 	<link rel="stylesheet" href="/_app/immutable/assets/pages/404.svelte-a05d9084.css">
-	<link rel="modulepreload" href="/_app/immutable/start-c74d8b25.js">
+	<link rel="modulepreload" href="/_app/immutable/start-c553896c.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/index-8c0e4016.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/index-c239ecf6.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/singletons-d1fb5791.js">
-	<link rel="modulepreload" href="/_app/immutable/pages/__layout.svelte-c5465100.js">
+	<link rel="modulepreload" href="/_app/immutable/pages/__layout.svelte-bf6afc43.js">
+	<link rel="modulepreload" href="/_app/immutable/chunks/navigation-6709cf39.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/siteConfig-cd65c973.js">
-	<link rel="modulepreload" href="/_app/immutable/chunks/stores-386c3cb2.js">
+	<link rel="modulepreload" href="/_app/immutable/chunks/stores-6b324ade.js">
 	<link rel="modulepreload" href="/_app/immutable/pages/404.svelte-b0080eae.js">
   </head>
   <body>
@@ -42,12 +43,14 @@
       <a href="/" sveltekit:prefetch class="text-lg hover:underline sm:text-base">Back
       </a></nav>
   <div class="no-js-hidden"><form><div class="hidden"><label for="system" class="ml-2 cursor-default sr-only">system</label>
-    <input type="radio" name="nightModeCheckbox" id="system" value="0"><label for="light" class="ml-2 cursor-default sr-only">light</label>
-    <input type="radio" name="nightModeCheckbox" id="light" value="1"><label for="dark" class="ml-2 cursor-default sr-only">dark</label>
-    <input type="radio" name="nightModeCheckbox" id="dark" value="2"></div>
+      <input type="radio" name="nightModeCheckbox" id="system" value="0"><label for="light" class="ml-2 cursor-default sr-only">light</label>
+      <input type="radio" name="nightModeCheckbox" id="light" value="1"><label for="dark" class="ml-2 cursor-default sr-only">dark</label>
+      <input type="radio" name="nightModeCheckbox" id="dark" value="2"></div>
 
-  <button class="no-js-hidden relative inline-block group w-8 h-8" aria-label="Theme Toggle"><span class="bottom-0 right-0 group-hover:text-light-blue-600 absolute w-1/2 h-2/3 i-teenyicons-moon-outline"></span>
-      <span class="top-0 left-0 group-hover:text-orange-400 absolute w-1/2 h-2/3 i-teenyicons-sun-outline"></span></button></form></div></header>
+  <button class="no-js-hidden relative inline-block group w-8 h-8" aria-label="Theme Toggle"><div class="font-mono hidden opacity-80 items-center justify-center group-hover:flex absolute right-0 capitalize mr-8 h-full text-xs inset-y-0">system</div>
+    <span class="inset-0 group-hover:text-indigo-500 m-auto w-3/5 h-3/5 absolute i-teenyicons-desklamp-outline"></span>
+    
+    </button></form></div></header>
   <main class="pt-4 sm:pt-6 flex-grow"><h1 class="mt-12 mb-4 font-bold flex font-serif text-7xl leading-none">404.
 </h1>
 <p class="text-2xl mt-4">Sorry! Page not found.</p>
@@ -57,9 +60,9 @@
   </a>.
 </p></main>
   <footer class="px-2 pt-24 pb-4 text-xs text-gray-400 font-mono text-center leading-loose"><p>This site was made by me and it&#39;s completely 
-      <a href="https://www.github.com/paullj/paullj.github.io" class="decoration-dotted underline decoration-2">open source
-      </a>
-      <span class="i-teenyicons-heart-small-solid"></span></p></footer></div>
+    <a href="https://www.github.com/paullj/paullj.github.io" class="decoration-dotted underline decoration-2">open source
+    </a>
+    <span class="i-teenyicons-heart-small-solid"></span></p></footer></div>
 
 
 <noscript><style>:global(.no-js-hidden) {
@@ -68,10 +71,10 @@
   </style></noscript>
 
 
-		<script type="module" data-sveltekit-hydrate="lw7gg8">
-		import { start } from "/_app/immutable/start-c74d8b25.js";
+		<script type="module" data-sveltekit-hydrate="y4kdfo">
+		import { start } from "/_app/immutable/start-c553896c.js";
 		start({
-			target: document.querySelector('[data-sveltekit-hydrate="lw7gg8"]').parentNode,
+			target: document.querySelector('[data-sveltekit-hydrate="y4kdfo"]').parentNode,
 			paths: {"base":"","assets":""},
 			session: {},
 			route: true,
