--- a/404.html
+++ b/404.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="content-security-policy" content="">
 	<link rel="stylesheet" href="/_app/immutable/assets/start-3644ecb0.css">
-	<link rel="stylesheet" href="/_app/immutable/assets/pages/__layout.svelte-f5cb86b0.css">
+	<link rel="stylesheet" href="/_app/immutable/assets/pages/__layout.svelte-430484e7.css">
 	<link rel="stylesheet" href="/_app/immutable/assets/pages/404.svelte-a05d9084.css">
-	<link rel="modulepreload" href="/_app/immutable/start-a54a31f2.js">
+	<link rel="modulepreload" href="/_app/immutable/start-c3cb5c2e.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/index-8c0e4016.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/index-c239ecf6.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/singletons-d1fb5791.js">
-	<link rel="modulepreload" href="/_app/immutable/pages/__layout.svelte-bf6afc43.js">
+	<link rel="modulepreload" href="/_app/immutable/pages/__layout.svelte-1368df3e.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/navigation-6709cf39.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/siteConfig-cd65c973.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/stores-6b324ade.js">
@@ -47,10 +47,8 @@
       <input type="radio" name="nightModeCheckbox" id="light" value="1"><label for="dark" class="ml-2 cursor-default sr-only">dark</label>
       <input type="radio" name="nightModeCheckbox" id="dark" value="2"></div>
 
-  <button class="no-js-hidden relative inline-block group w-8 h-8" aria-label="Theme Toggle"><div class="font-mono hidden opacity-80 items-center justify-center group-hover:flex absolute right-0 capitalize mr-8 h-full text-xs inset-y-0">system</div>
-    <span class="inset-0 group-hover:text-indigo-500 m-auto w-3/5 h-3/5 absolute i-teenyicons-desklamp-outline"></span>
-    
-    </button></form></div></header>
+  <button class="no-js-hidden relative inline-block group w-12 h-12 sm:w-10 sm:h-10" aria-label="Theme Toggle"><div class="font-mono flex sm:hidden opacity-80 items-center justify-center group-hover:flex absolute right-0 capitalize mr-12 sm:mr-10 h-full text-sm sm:text-xs inset-y-0">system</div>
+    <span class="inset-0 group-hover:text-indigo-500 m-auto w-3/5 h-3/5 absolute i-teenyicons-desklamp-outline"></span></button></form></div></header>
   <main class="pt-4 sm:pt-6 flex-grow"><h1 class="mt-12 mb-4 font-bold flex font-serif text-7xl leading-none">404.
 </h1>
 <p class="text-2xl mt-4">Sorry! Page not found.</p>
@@ -71,10 +69,10 @@
   </style></noscript>
 
 
-		<script type="module" data-sveltekit-hydrate="y4kdfo">
-		import { start } from "/_app/immutable/start-a54a31f2.js";
+		<script type="module" data-sveltekit-hydrate="fplfpq">
+		import { start } from "/_app/immutable/start-c3cb5c2e.js";
 		start({
-			target: document.querySelector('[data-sveltekit-hydrate="y4kdfo"]').parentNode,
+			target: document.querySelector('[data-sveltekit-hydrate="fplfpq"]').parentNode,
 			paths: {"base":"","assets":""},
 			session: {},
 			route: true,
