--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 	<link rel="stylesheet" href="/_app/immutable/assets/start-3644ecb0.css">
 	<link rel="stylesheet" href="/_app/immutable/assets/pages/__layout.svelte-430484e7.css">
 	<link rel="stylesheet" href="/_app/immutable/assets/pages/index.svelte-6a3b96cc.css">
-	<link rel="stylesheet" href="/_app/immutable/assets/pages/posts/index.svelte-26a28d0a.css">
-	<link rel="modulepreload" href="/_app/immutable/start-c3cb5c2e.js">
+	<link rel="stylesheet" href="/_app/immutable/assets/pages/posts/__error.svelte-4afa8b22.css">
+	<link rel="modulepreload" href="/_app/immutable/start-c66fda7f.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/index-8c0e4016.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/index-c239ecf6.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/singletons-d1fb5791.js">
-	<link rel="modulepreload" href="/_app/immutable/pages/__layout.svelte-1368df3e.js">
+	<link rel="modulepreload" href="/_app/immutable/pages/__layout.svelte-a7d27f59.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/navigation-6709cf39.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/siteConfig-cd65c973.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/stores-6b324ade.js">
@@ -136,7 +136,9 @@ Lavender-Jones</h1>
       <li class="ml-2"><a class="hover:underline underline-1.5" href="?page=2">Next
         </a>
         <span class="i-teenyicons-right-outline"></span></li></ul></nav></div></div></main>
-  <footer class="px-2 pt-24 pb-4 text-xs text-gray-400 font-mono text-center leading-loose"><p>This site was made by me and it&#39;s completely 
+  <footer class="px-2 pt-24 pb-4 text-xs text-gray-400 font-mono text-center leading-loose"><p>This site was made by me
+    <br class="sm:hidden">
+     and it&#39;s completely 
     <a href="https://www.github.com/paullj/paullj.github.io" class="decoration-dotted underline decoration-2">open source
     </a>
     <span class="i-teenyicons-heart-small-solid"></span></p></footer></div>
@@ -148,10 +150,10 @@ Lavender-Jones</h1>
   </style></noscript>
 
 
-		<script type="module" data-sveltekit-hydrate="1weshxg">
-		import { start } from "/_app/immutable/start-c3cb5c2e.js";
+		<script type="module" data-sveltekit-hydrate="ols57v">
+		import { start } from "/_app/immutable/start-c66fda7f.js";
 		start({
-			target: document.querySelector('[data-sveltekit-hydrate="1weshxg"]').parentNode,
+			target: document.querySelector('[data-sveltekit-hydrate="ols57v"]').parentNode,
 			paths: {"base":"","assets":""},
 			session: {},
 			route: true,
